<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/battery_status"
            />

        <TextView
            android:id="@+id/battery_status_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/battery_status_charging"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/battery_level"
            />

        <TextView
            android:id="@+id/battery_level_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="88%"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/battery_state"
            />

        <TextView
            android:id="@+id/battery_state_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="2"
            />
    </LinearLayout>

</LinearLayout>