<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/linear_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/InputContent_et"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/editsharp"
                    android:hint="@string/Print_code_content_hint"
                    android:text="@string/Print_code_content_et" />

                <EditText
                    android:id="@+id/TestTimes_et"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.4"
                    android:background="@drawable/editsharp"
                    android:gravity="center"
                    android:hint="@string/Print_test_times_hint"
                    android:inputType="number"
                    android:text="1"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/PrintTicket_btn"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/cornerbtn_style"
                android:gravity="center"
                android:text="@string/PrintTicket_btn" />

            <Button
                android:id="@+id/PrintTest_btn"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/cornerbtn_style2"
                android:text="@string/PrintTest_btn" />

            <!--
                 <Button
                android:id="@+id/GetStates_btn"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/cornerbtn_style3"
                android:text="@string/GetStates_btn" />
            -->

            <LinearLayout
                android:id="@+id/linear_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/Get_State_et"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="3"
                    android:background="@drawable/editsharp3"
                    android:clickable="false"
                    android:editable="false"
                    android:gravity="left"
                    android:longClickable="false"
                    android:scrollbars="vertical"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/Clear_btn"
                    style="@style/CustomButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/cornerbtn_style2"
                    android:text="@string/Clear_btn" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_nvbmp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linear_nvbmp_path"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal" >
                    <Button
                        android:id="@+id/SelectBmpFile"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/cornerbtn_style"
                        android:text="@string/SelectBmpFile" />
                    <EditText
                        android:id="@+id/Nvbmp_path_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:background="@drawable/editsharp"
                        android:editable="false"
                        android:ems="15"
                        android:hint="@string/Bmp_path_et" >
                        <requestFocus />
                    </EditText>

                    <CheckBox
                        android:id="@+id/Is_AddLoadBmpPath"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/Open"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_nvbmp_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/Load_nvbmp_btn"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/cornerbtn_style"
                        android:text="@string/Load_Bmp_btn"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/Print_nvbmp_btn"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/cornerbtn_style2"
                        android:text="@string/Print_Bmp_btn" />
                    <Button
                        android:id="@+id/Clear_Path_Btn"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/cornerbtn_style"
                        android:text="@string/ClearPath_btn" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_printer_model"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/D347QrBtn"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/cornerbtn_style"
                        android:text="@string/D347QR" />

                    <Button
                        android:id="@+id/D245QrBtn"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/cornerbtn_style2"
                        android:text="@string/D245QR" />

                    <Button
                        android:id="@+id/T500IIQrBtn"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/cornerbtn_style"
                        android:text="@string/T500IIQr" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_printer_model2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/Print_1DBar_Btn"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/cornerbtn_style2"
                        android:text="Print1DBarByType" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_printimgfile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal" >
                    <Button
                        android:id="@+id/SelectImgFile"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/cornerbtn_style"
                        android:text="@string/SelectImgFile" />
                    <EditText
                        android:id="@+id/Img_path_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/editsharp"
                        android:editable="false"
                        android:ems="10"
                        android:hint="@string/Img_path_et" >

                        <requestFocus />
                    </EditText>
                    <Button
                        android:id="@+id/Print_Imgfile_Btn"
                        style="@style/CustomButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="0.4"
                        android:background="@drawable/cornerbtn_style2"
                        android:text="@string/Print_Img_btn" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_SetParams"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/SeatContent1_et"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/editsharp"
                        android:hint="@string/Print_code_content_hint"
                        android:text="姓名" />

                    <EditText
                        android:id="@+id/SetColumn1_et"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.4"
                        android:background="@drawable/editsharp"
                        android:gravity="center"
                        android:hint="第1列"
                        android:inputType="number"
                        android:text="8"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/SeatContent2_et"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/editsharp"
                        android:hint="@string/Print_code_content_hint"
                        android:text="班级" />

                    <EditText
                        android:id="@+id/SetColumn2_et"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.4"
                        android:background="@drawable/editsharp"
                        android:gravity="center"
                        android:hint="第2列"
                        android:inputType="number"
                        android:text="16"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/SeatContent3_et"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/editsharp"
                        android:hint="@string/Print_code_content_hint"
                        android:text="ABCD" />
                </LinearLayout>

                <Button
                    android:id="@+id/Print_Seat_Btn"
                    style="@style/CustomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/cornerbtn_style"
                    android:text="@string/PrintHorTable" />

                <TextView
                    android:id="@+id/HTSeat_tv"
                    style="@style/CustomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="00 00 00" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>