<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >

    <TextView
        android:id="@+id/title_tvw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/test_camera"
        android:gravity="center"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tips_tvw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tipsTextStyle"
        android:text="注意"
        />


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--&gt;-->

        <!--<ScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<LinearLayout-->
                <!--android:id="@+id/content_llt"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical" />-->

        <!--</ScrollView>-->

    <!--</LinearLayout>-->



    <LinearLayout
        android:id="@+id/content_llt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fail_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorFail"
            android:text="@string/fail"
            />

        <Button
            android:id="@+id/success_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorSuccess"
            android:text="@string/success"
            />

    </LinearLayout>

</LinearLayout>